--- a/index_lawyer.html
+++ b/index_lawyer.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-    <!-- Begin Head -->
     <head>
         <!-- Basic -->
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Megakit - HTML5 Theme</title>
-        <meta name="keywords" content="HTML5 Theme" />
-        <meta name="description" content="Megakit - HTML5 Theme">
-        <meta name="author" content="keenthemes.com">
+        <title>Asya Meubelen | Welkom</title>
+        <meta name="keywords" content="Meubel groothandel" />
+        <meta name="description" content="Groothandel in meubels">
+        <meta name="author" content="Kagan Dag">
 
         <!-- Web Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i|Montserrat:400,700" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
 
         <!-- Vendor Styles -->
         <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <link href="css/animate.css" rel="stylesheet" type="text/css"/>
         <link href="vendor/themify/themify.css" rel="stylesheet" type="text/css"/>
         <link href="vendor/scrollbar/scrollbar.min.css" rel="stylesheet" type="text/css"/>
+        <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css"/>
         <link href="vendor/swiper/swiper.min.css" rel="stylesheet" type="text/css"/>
         <link href="vendor/cubeportfolio/css/cubeportfolio.min.css" rel="stylesheet" type="text/css"/>
 
@@ -27,14 +26,10 @@
         <link href="css/style.css" rel="stylesheet" type="text/css"/>
         <link href="css/global/global.css" rel="stylesheet" type="text/css"/>
 
-        <!-- Theme Skins -->
-        <link href="css/theme/gold.css" rel="stylesheet" type="text/css"/>
-
         <!-- Favicon -->
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
         <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
     </head>
-    <!-- End Head -->
 
     <!-- Body -->
     <body>
@@ -48,9 +43,10 @@
                         <div class="s-header__navbar-row-col">
                             <!-- Logo -->
                             <div class="s-header__logo">
-                                <a href="index.html" class="s-header__logo-link">
-                                    <img class="s-header__logo-img s-header__logo-img-default" src="img/logo-gold.png" alt="Megakit Logo">
-                                    <img class="s-header__logo-img s-header__logo-img-shrink" src="img/logo-gold-dark.png" alt="Megakit Logo">
+                                <a href="#top" class="s-header__logo-link">
+                                    <h3>Asya Meubelen</h3>
+                                    <!-- <img class="s-header__logo-img s-header__logo-img-default" src="img/logo.png" alt="Megakit Logo">
+                                    <img class="s-header__logo-img s-header__logo-img-shrink" src="img/logo.png" alt="Megakit Logo"> -->
                                 </a>
                             </div>
                             <!-- End Logo -->
@@ -75,55 +71,48 @@
                 <!-- Nav -->
                 <nav class="s-header__nav js__scrollbar">
                     <div class="container-fluid">
-                        <!-- Menu List -->                                
+                      <!-- Menu List -->
+                      <ul class="list-unstyled s-header__nav-menu">
+                          <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="about.html">Over ons</a></li>
+                          <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="services.html">Service</a></li>
+                          <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="faq.html">FAQ</a></li>
+                          <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="contacts.html">Contact</a></li>
+                      </ul>
+                      <!-- End Menu List -->
+                        <!-- Menu List -->
                         <ul class="list-unstyled s-header__nav-menu">
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider g-font-family--playfair" href="index.html">Corporate</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider g-font-family--playfair" href="index_app_landing.html">App Landing</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider g-font-family--playfair" href="index_portfolio.html">Portfolio</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider g-font-family--playfair" href="index_events.html">Events</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider g-font-family--playfair -is-active" href="index_lawyer.html">Lawyer</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider g-font-family--playfair" href="index_clinic.html">Clinic</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider g-font-family--playfair" href="index_coming_soon.html">Coming Soon</a></li>
+                          <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="events.html">Banken op maat</a></li>
+                          <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="events.html">Prijzen</a></li>
+                          <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="index_lawyer.html">Lawyer</a></li>
                         </ul>
                         <!-- End Menu List -->
 
-                        <!-- Menu List -->                                
-                        <ul class="list-unstyled s-header__nav-menu">
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider g-font-family--playfair" href="about.html">About</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider g-font-family--playfair" href="team.html">Team</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider g-font-family--playfair" href="services.html">Services</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider g-font-family--playfair" href="events.html">Events</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider g-font-family--playfair" href="faq.html">FAQ</a></li>
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider g-font-family--playfair" href="contacts.html">Contacts</a></li>
-                        </ul>
-                        <!-- End Menu List -->
                     </div>
                 </nav>
                 <!-- End Nav -->
-                
+
                 <!-- Action -->
-                <ul class="list-inline s-header__action s-header__action--lb">
-                    <li class="s-header__action-item g-font-family--playfair"><a class="s-header__action-link -is-active" href="#">En</a></li>
-                    <li class="s-header__action-item g-font-family--playfair"><a class="s-header__action-link" href="#">Fr</a></li>
-                </ul>
+                <!-- <ul class="list-inline s-header__action s-header__action--lb">
+                    <li class="s-header__action-item"><a class="s-header__action-link -is-active" href="#">En</a></li>
+                </ul> -->
                 <!-- End Action -->
 
                 <!-- Action -->
                 <ul class="list-inline s-header__action s-header__action--rb">
                     <li class="s-header__action-item">
-                        <a class="s-header__action-link g-font-family--playfair" href="https://www.behance.net/keenthemes">
+                        <a class="s-header__action-link" href="https://nl-nl.facebook.com/asyaoutletmeubelen/">
                             <i class="g-padding-r-5--xs ti-facebook"></i>
                             <span class="g-display-none--xs g-display-inline-block--sm">Facebook</span>
                         </a>
                     </li>
                     <li class="s-header__action-item">
-                        <a class="s-header__action-link g-font-family--playfair" href="https://twitter.com/keenthemes">
+                        <a class="s-header__action-link" href="#">
                             <i class="g-padding-r-5--xs ti-twitter"></i>
                             <span class="g-display-none--xs g-display-inline-block--sm">Twitter</span>
                         </a>
                     </li>
                     <li class="s-header__action-item">
-                        <a class="s-header__action-link g-font-family--playfair" href="https://dribbble.com/keenthemes">
+                        <a class="s-header__action-link" href="#">
                             <i class="g-padding-r-5--xs ti-instagram"></i>
                             <span class="g-display-none--xs g-display-inline-block--sm">Instagram</span>
                         </a>
@@ -136,17 +125,15 @@
         <!--========== END HEADER ==========-->
 
         <!--========== PROMO BLOCK ==========-->
-        <div class="g-fullheight--xs js__parallax-window" style="background: url(img/1920x1080/11.jpg) 50% 0 no-repeat fixed; background-size: cover;">
+        <div class="g-fullheight--xs js__parallax-window" style="background: url(img/yola.jpg) 100% 0 no-repeat fixed; background-size: cover;">
             <div class="g-container--md g-ver-center--xs g-text-center--xs">
                 <div class="g-margin-b-70--xs">
-                    <h1 class="g-font-size-55--sm g-font-size-70--lg g-font-family--playfair g-color--primary g-margin-b-20--xs g-margin-b-40--sm">High Quality Law</h1>
-                    <p class="g-font-size-18--xs g-font-size-20--sm g-font-size-24--lg g-color--white g-margin-b-0--xs">Whether your case involves a complex divorce, child custody, domestic violence or DUI, we are dedicated to vigorously protecting your future.</p>
+                    <h1 class="g-font-size-55--sm g-font-size-70--lg g-font-family--playfair g-color--primary g-margin-b-20--xs g-margin-b-40--sm">Yola</h1>
                 </div>
-                <a href="#js__scroll-to-section" class="text-uppercase s-btn s-btn-icon--md s-btn--primary-brd g-radius--50 g-padding-x-60--xs">Hire Us</a>
             </div>
-            <a href="http://keenthemes.com/" class="s-scroll-to-section-v1--bc g-margin-b-15--xs">
+            <a href="#" class="s-scroll-to-section-v1--bc g-margin-b-15--xs">
                 <span class="g-font-size-18--xs g-color--white ti-angle-double-down"></span>
-                <p class="text-uppercase g-font-family--playfair g-color--white g-letter-spacing--3 g-margin-b-0--xs">Learn More</p>
+                <p class="text-uppercase g-font-family--playfair g-color--white g-letter-spacing--3 g-margin-b-0--xs">Lees meer!</p>
             </a>
         </div>
         <!--========== END PROMO BLOCK ==========-->
@@ -286,7 +273,7 @@
                                 <p>The only answer that I have found is to get the case BEFORE any of these attorneys gets involved and do everything possible to make sure that neither party brings them on-board. This is VERY difficult and requires reaching the couple BEFORE either of them has retained counsel.”</p>
                                 <p>As luck would have it, this same attorney attended a program I gave on June 23, 2015 on “How to Resolve Conflict.” During the Question and Answer portion of the program, he asked me that same question.</p>
                             </div>
-                            <div class="s-tab__grid-v1-item cbp-item service">  
+                            <div class="s-tab__grid-v1-item cbp-item service">
                                 <div class="g-margin-b-20--xs">
                                     <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Criminal Law</p>
                                     <h2 class="g-font-size-32--xs g-font-family--playfair">A Criminal Defense Attorney is Any Good</h2>
@@ -406,7 +393,7 @@
             </div>
         </div>
         <!-- End Testimonials -->
-        
+
         <!-- News -->
         <div class="g-bg-color--sky-light">
             <div class="container g-padding-y-80--xs g-padding-y-125--sm">
